--- a/client/src/app/pages/home/home.html
+++ b/client/src/app/pages/home/home.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="min-h-screen">
+  <app-navbar />
+  <main>
+    <app-main-section />
+    <app-about-section />
+    <app-image-carousel />
+    <app-services-section />
+    <app-portfolio-section />
+    <app-contact-section />
+  </main>
+  <app-footer />
+</div>
